--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
     implementation("androidx.navigation:navigation-dynamic-features-fragment:2.4.2")
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     androidTestImplementation("androidx.navigation:navigation-testing:2.4.2")
     implementation("androidx.navigation:navigation-compose:2.4.2")
     // Retrofit - Consumo API REST
