--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     androidTestImplementation("androidx.navigation:navigation-testing:2.4.2")
     implementation("androidx.navigation:navigation-compose:2.4.2")
-    // Retrofit - Consumo API REST
+    // Retrofit - API REST
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     // Corrutinas
